--- a/css/default.css
+++ b/css/default.css
@@ -14,7 +14,6 @@
 }
 
 html, body {
-	background-color: var(--backgroundShadow);
 	padding: 0;
 	margin: 0;
 }
@@ -27,7 +26,7 @@ body * {
 	width: 100%;
 	padding: 10px;
 	text-align: center;
-	color: var(--secondaryText);
+	color: var(--mainText);
 	text-decoration: underline;
 	font-size: 22px
 }
@@ -111,35 +110,34 @@ p, li, span, label, input, textarea {
 	padding-bottom: 50px;
 }
 
-.left-column {
-	grid-area: left-column;
-	border-right-style: solid;
-	border-right-width: 2px;
-	border-right-color: var(--borderColor);
+.right-column {
+	grid-area: right-column;
 }
 
-.left-column img {
+/*.right-column img {
 	display: block;
 	margin: 0 auto;
 	width: 200px;
 	height: 200px;
 	object-fit: cover;
 	border: 2px solid var(--borderColor);
-}
+}*/
 
-.right-column {
+.left-column {
+	padding: 12px;
+	font-size: 18px;
 	margin-left: 2%;
-	margin-right: 2%;
-	grid-area: right-column; 
+	grid-area: left-column;
+	border-right: 2px solid var(--borderColor);
 }
 
 .skills {
-	margin-top: 10%;
+	margin-top: 5%;
 	text-align: center;
 }
 
 .skills img {
-	margin: 0 50px;
+	margin: 0px 50px;
 	height: 8%;
 	width: 8%;
 }
@@ -155,6 +153,18 @@ p, li, span, label, input, textarea {
 	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
 	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
 	cursor: pointer;
+}
+
+.theme-div {
+	width: 70%;
+	margin: 0 auto;
+	margin-top: 15%;
+	border: 2px solid var(--borderColor);
+	padding-bottom: 20px;
+	background-color: var(--backgroundShadow);
+	-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
 }
 
 .theme-dot:hover {
@@ -205,6 +215,7 @@ p, li, span, label, input, textarea {
 }
 
 .skills-list {
+	border: 2px solid var(--borderColor);
 	background-color: var(--backgroundShadow);
 	display: flex;
 	justify-content: space-evenly;
