--- a/css/blue.css
+++ b/css/blue.css
@@ -10,8 +10,6 @@
 	--backgroundShadow:#111921;
 	
 	--btnColor:#17a2b8;
-}
 
-.svg-external {
-	filter: invert(100%) sepia(2%) saturate(2099%) hue-rotate(295deg) brightness(116%) contrast(75%);
+	--contactImgColor: invert(100%) sepia(2%) saturate(2099%) hue-rotate(295deg) brightness(116%) contrast(75%);
 }
