--- a/css/default.css
+++ b/css/default.css
@@ -11,7 +11,11 @@
 	--backgroundShadow: #f0ead6;
 
 	--btnColor: black;
+
+	--contactImgColor: invert(0%) sepia(0%) saturate(7500%) hue-rotate(340deg) brightness(94%) contrast(106%);
 }
+
+.svg-external { filter: var(--contactImgColor) }
 
 html, body {
 	padding: 0;
