--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
     --ligth-main-color: #e3d6cc;
     --darker-secondary-color: #c7bcb3;
+    --background-image-svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23c7bcb3' fill-opacity='0.78'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 * {
     margin: 0;
@@ -11,7 +12,7 @@
 
 body {
     background-color: var(--ligth-main-color);
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23c7bcb3' fill-opacity='0.78'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: var(--background-image-svg)
 }
 
 .box {
@@ -78,19 +79,28 @@ a:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.skills-wrapper, .proyect-skills {
+    font-weight: bold;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .skills-wrapper {
     margin-top: 20px;
     padding: 20px;
     background-color: var(--darker-secondary-color);
     box-shadow: var(--box-shadow);
-    display: flex;
-    justify-content: space-around;
     font-weight: bold;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
-.tec-used {
-    margin-top: 10px;
-    font-weight: bold;
+.proyect-skills {
+    margin-top: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;;
+    padding: 7px;
+    border-radius: 7px;;
+    background-color: var(--ligth-main-color);
 }
 
 .description {
